--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/6-filters.css">
+    <link rel="stylesheet" href="styles/7-places.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 
@@ -48,6 +49,19 @@
                 </ul>
             </div>
             <button>Search</button>
+        </section>
+
+        <section class="places">
+            <h1>Places</h1>
+            <article class="place">
+                <h2>My home</h2>
+            </article>
+            <article class="place">
+                <h2>Tiny house</h2>
+            </article>
+            <article class="place">
+                <h2>A suite</h2>
+            </article>
         </section>
     </div>
 
